<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F8787"
    tools:context=".AdminOptionsFragment">

    <Button
        android:id="@+id/b_agent_2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#090909"
        android:text="@string/agent"
        app:layout_constraintBottom_toTopOf="@+id/b_user_2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_user_2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#090909"
        android:text="@string/user"
        app:layout_constraintBottom_toTopOf="@+id/b_reservation_2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_reservation_2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#090909"
        android:text="@string/Reservations"
        app:layout_constraintBottom_toTopOf="@+id/b_flyer_2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_flyer_2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#090909"
        android:text="@string/flyer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>