<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F8787"
    tools:context=".SearchResultsFragment">

    <Button
        android:id="@+id/b_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#095293"
        android:text="@string/addToCart"
        app:layout_constraintBottom_toTopOf="@+id/b_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_checkout"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#336C36"
        android:text="@string/checkout"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_view_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#095293"
        android:text="@string/viewCart"
        app:layout_constraintBottom_toTopOf="@+id/b_checkout"
        app:layout_constraintEnd_toStartOf="@+id/b_add_to_cart"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>